@@ -1229,7 +1229,6 @@ protected:
 
 	float	fixedZ;
 	EmuAppearance    _appearance;
-	int8	standstate;
 	int8	pRunAnimSpeed;
 	bool	m_is_running;
 
